# gemini-capsule

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  generate.py  pyproject.toml
.github/workflows/: docker.yml  lint.yml
content/: blog.gmi  index.gmi  kontakt.gmi
content/blog/: index.gmi
content/blog/2013/10/: der-hackerspace.gmi  ein-hackerspace-fuer-rapperswil.gmi  unsere-sponsoren.gmi
content/blog/2013/11/: coredump-wallpapers.gmi  fotos-aus-dem-hackerspace.gmi
content/blog/2014/01/: diy-canon-ir-fernausloser.gmi
content/blog/2014/03/: linedump-at-hsr.gmi
content/blog/2014/11/: der-c64-nackt.gmi  ferienpass-im-hackerspace.gmi
content/blog/2015/01/: ein-3d-drucker-fur-rapperswil-jona.gmi
content/blog/2015/02/: 3d-drucker-crowdfunding-geschafft.gmi
content/blog/2015/03/: der-eiffelturm-aus-dem-3d-drucker.gmi
content/blog/2015/05/: der-hackerspace-2015.gmi
content/blog/2015/10/: artikel-in-der-zurichsee-zeitung.gmi  photogrammetrie-evaluation.gmi  untervereinsvorstellung-hsr.gmi
content/blog/2016/04/: coredump-am-fruhlingsfest.gmi  news-2016.gmi
content/blog/2016/05/: ruckblick-fruhlingsfest.gmi
content/blog/2016/06/: fairphone-1-power-button-reparatur.gmi  wir-sind-umgezogen.gmi
content/blog/2016/09/: coredump-lightning-talks-hsr.gmi
content/blog/2016/10/: coredump-vorstellung-hsr.gmi
content/blog/2016/11/: ferienpass-2016.gmi  rust-servo-hackathon.gmi
content/blog/2016/12/: erste-versuche-mit-reflow-ofen.gmi
content/der-verein/: gonner-und-sponsoren.gmi  mitgliedschaft.gmi
(+116 files in other folders)
