[project]
name = "gemini-capsule"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4~=4.14.3",
    "requests~=2.32.5",
]
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "U"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
